--- a/views/login.erb
+++ b/views/login.erb
@@ -1,5 +1,14 @@
-<form action='/'>
-   <label for='user'>User Name:</label>
-   <input name='user' value='' />
-   <input type='submit' value="GO!" />
-</form>
+<html>
+   <head> 
+      <title>Super Simple Chat with Sinatra</title> 
+      <meta charset="utf-8" />
+      <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script> 
+   </head> 
+   <body>
+    <form action='/'>
+       <label for='user'>User Name:</label>
+       <input name='user' value='' />
+       <input type='submit' value="GO!" />
+    </form>
+   </body>
+</html>
