--- a/views/chat.erb
+++ b/views/chat.erb
@@ -1,18 +1,25 @@
-<pre id='chat'></pre>
+<html>
+   <head> 
+      <title>Super Simple Chat with Sinatra</title> 
+      <meta charset="utf-8" />
+      <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script> 
+   </head> 
+   <body>
+    <pre id='chat'></pre>
+    <script>
+       // reading
+       var es = new EventSource("/stream/<%= user %>");
+       es.onmessage = function(e) { $('#chat').append(e.data + "\n") };
 
-<script>
-   // reading
-   var es = new EventSource("/stream/<%= user %>");
-   es.onmessage = function(e) { $('#chat').append(e.data + "\n") };
-
-   // writing
-   $("form").live("submit", function(e) {
-      $.post('/', {msg: "<%= user %>: " + $('#msg').val()});
-      $('#msg').val(''); $('#msg').focus();
-      e.preventDefault();
-   });
-</script>
-
-<form>
-   <input id='msg' placeholder='Escriba su mensaje aquí...' />
-</form>
+       // writing
+       $("form").live("submit", function(e) {
+          $.post('/', {msg: "<%= user %>: " + $('#msg').val()});
+          $('#msg').val(''); $('#msg').focus();
+          e.preventDefault();
+       });
+    </script>
+    <form>
+       <input id='msg' placeholder='Escriba su mensaje aquí...' />
+    </form>
+   </body>
+</html>
